issues/IF-343: wysiwyg content vertically center align to image & text always top for mobile.

--- a/wp-content/themes/fr-starter-theme/resources/styles/modules/_image-wysiwyg.scss
+++ b/wp-content/themes/fr-starter-theme/resources/styles/modules/_image-wysiwyg.scss
@@ -8,7 +8,7 @@
                 flex-direction: row-reverse;
 
                 @include breakpoint(lg down) {
-                    flex-direction: column;
+                    flex-direction: column-reverse;
                 }
             }
 
@@ -23,6 +23,7 @@
 
                 @include breakpoint(lg down) {
                     padding: 0;
+                    text-align: center;
                 }
             }
 
